# quickstart

./: .editorconfig  .env.sample  .env.template  .env.test  .gitignore  CLAUDE.md  ELECTRON_PLAN.spec  GO_IMPROVEMENTS.md  NUL  README.md  check_resources.cs  correct.env  debug-browserstack.py  ios_browserstack_replacement.yml  justfile  noquotes.env  package-lock.json  rust-toolchain  session_response.json  simple-browserstack-test.py  test-maestro-simple.yaml  test_sorting.py  upload_response.json
.claude/: settings.local.json
.github/: CODEOWNERS  REFACTOR_PLAN.md  browserstack-devices.json  browserstack-devices.yml
.github/scripts/: browserstack-android-test.py  browserstack-appium-test.py  browserstack-ios-test.py  browserstack-maestro-test.py  browserstack-test.py  flutter-android-browserstack-test.py  flutter-browserstack-test.py  flutter-ios-browserstack-test.py  ios-browserstack-test.py  requirements.txt  retry-browserstack.sh  test-appium-local.py
.github/workflows/: android-cpp-browserstack.yml  android-cpp-ci.yml  android-java-browserstack.yml  android-java-ci.yml  android-kotlin-browserstack.yml  android-kotlin-ci.yml  comprehensive-integration.yml  cpp-browserstack.yml  cpp-ci.yml  cpp-tui-ci.yml  cpp-tui-secondary.yml  desktop-comprehensive.yml  dotnet-maui-browserstack.yml  dotnet-maui-ci.yml  dotnet-tui-ci.yml  dotnet-winforms-ci.yml  edge-server-ci.yml  flutter-browserstack-real-devices.yml  flutter-browserstack.yml  flutter-ci-browserstack.yml  flutter-ci.yml  flutter-gha.yml  ios-browserstack.yml  java-server-ci.yml  java-spring-browserstack.yml  java-spring-ci.yml  javascript-tui-ci.yml  javascript-web-browserstack-test.yml  javascript-web-browserstack-v2.yml  javascript-web-browserstack.yml  javascript-web-ci.yml  kotlin-multiplatform-browserstack.yml  kotlin-multiplatform-ci.yml  kotlin-multiplatform-ci.yml.bak  lint-gha-workflow.yml  pr-checks.yml  react-native-bare-ios-maestro-browserstack.yml  react-native-bare-maestro-browserstack.yml  react-native-ci.yml  react-native-expo-appium-browserstack.yml  (+12 more)
android/: README.md
android-cpp/: browserstack-test.sh
android-java/: README.md
android-java/app/: build.gradle.kts
android-java/gradle/: libs.versions.toml
android-kotlin/: LOCAL_TESTING.md  README.md
android-kotlin/QuickStartTasks/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  switch-module.sh
android-kotlin/scripts/: seed-test-document.py  test-local.sh
cpp/: README.md
cpp-android/: README.md
cpp-tui/: README.md
cpp-tui/taskscpp/: CMakeLists.txt  Makefile  (+1 more)
cpp/taskscpp/: .bazelrc  BUILD.bazel  CMakeLists.txt  Makefile
cpp/taskscpp/scripts/: generate_env.awk
cpp/taskscpp/sdk/: BUILD.bazel
cpp/taskscpp/src/: main.cpp  task.h  task_json.cpp  task_json.h  tasks_exception.h  tasks_log.cpp  tasks_log.h  tasks_peer.cpp  tasks_peer.h  tasks_tui.cpp  tasks_tui.h  tasks_util.cpp  tasks_util.h  transform_container.h
dotnet/: .gitignore  DittoMauiTasksApp.sln  README.md
dotnet-maui/: README.md
dotnet-tui/: README.md
dotnet-winforms/: README.md
dotnet-winforms-net48/: .env.sample  AppConfiguration.cs  InputDialog.cs  LoadingForm.Designer.cs  LoadingForm.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  README.md  Taskapp.WinForms.Net48.csproj  Taskapp.WinForms.Net48.sln  TasksPeer.cs  TasksPeerService.cs  ToDoTask.cs  packages.config
edge-server/: README.md  justfile  quickstart_config.yaml  quickstart_config_sample.yaml
electron/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
flutter/: .flutter-plugins  .flutter-plugins-dependencies  README.md
flutter_app/: .gitignore  BROWSERSTACK_WORKING_SOLUTION.md  BS_WORKING.md  BS_WORKING_iOS.md  README.md  browserstack_config.json  build.sh  build_ios_test_package.sh  devtools_options.yaml  pubspec.yaml  test.sh  upload_and_run_ios_tests.sh
flutter_attachment_test/: pubspec.yaml
flutter_quickstart/: README.md  pubspec.yaml
go-tui/: .editorconfig  .gitignore  Makefile  README.md  go.mod  go.sum  main.go  redirect_unix.go  redirect_windows.go  widgets.go
ios/: README.md
java-server/: .gitignore  APP-V-DEPLOYMENT.md  Dockerfile  WINDOWS-DEPLOYMENT.md  build-deploy-package.ps1  build-zip-package.ps1  build.gradle.kts  ditto-service.xml  docker-compose.yml  gradle.properties  install.bat  justfile  launch.bat  run-docker.sh  settings.gradle.kts  uninstall.bat
java-spring/: browserstack.yml  build.gradle.kts  settings.gradle.kts  test-report.md
javascript/: README.md  package-lock.json  package.json
javascript-tui/: NUL  README.md  package-lock.json  package.json  tui-test.config.js
javascript-web/: README.md  package-lock.json  package.json
kotlin-multiplatform/: .gitignore  INTEGRATION_TESTS.md  README.md  TESTING.md  browserstack-api.sh  browserstack-config.md  build.gradle.kts  detekt.yml  gradle.properties  iOS_BROWSERSTACK_SETUP.md  settings.gradle.kts  test_ios_e2e.py
maestro-tests/: main.yaml
react-native/: .gitignore  App.tsx  Gemfile  README.md  app.json  dittoSingleton.ts  export-options.plist  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
react-native-expo/: .gitignore  App.tsx  MIGRATION-EXPO-V5.md  README.md  app.json  babel.config.js  export-options.plist  main.tsx  metro.config.js  package-lock.json  package.json  test-1.xml
react-native-old-backup/: package.json
rust/: Cargo.toml  README.md
rust-sensors/: Cargo.toml
rust-sensors/src/: main.rs
rust-tui/: Cargo.toml  README.md  build.rs  build.sh
rust/src/: config.rs  input.rs  lib.rs  term.rs
rust/src/tasks/: mod.rs
rust/src/tasks/tui/: mod.rs  profile_container.rs  todolist.rs  todolist_container.rs
rust/src/tui/: mod.rs  todolist.rs
scripts/: bump-versions.js  cloud-smoke-test.js  test-maestro-locally.sh
spring-quickstart-java/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
swift/: BasicConnectivityTest.swift  LocalTestRunner.swift  README.md  SeedTask.swift  TestRunner.swift  appium_test.py  export-options.plist  requirements.txt  test-trigger.txt
(+760 files in other folders)
