[package]
name = "ditto-quickstart"
version = "0.0.0"
edition = "2021"
default-run = "ditto-quickstart"

[lib]
name = "ditto_quickstart"
path = "src/lib.rs"

[[bin]]
name = "ditto-quickstart"
path = "src/bin/main.rs"

[dependencies]
# Ditto dependenceis
# dittolive-ditto = "4.7.1"
dittolive-ditto = "4.9.0-rc.1"

# External dependencies
anyhow = "1"
async-shutdown = "0.2"
crossterm = { version = "0.27", features = ["event-stream"] }
fehler = "1"
flume = "0.11.0"
futures = "0.3.30"
futures-concurrency = "7.6.0"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.22"
ratatui = { version = "0.28", features = ["crossterm"] }
resolve-path = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.37", features = ["full", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
