[package]
name = "ditto-quickstart"
version = "0.0.0"
edition = "2021"
default-run = "ditto-quickstart"

[lib]
name = "ditto_quickstart"
path = "src/lib.rs"

[[bin]]
name = "ditto-quickstart"
path = "src/bin/main.rs"

[dependencies]
# Ditto dependenceis
dittolive-ditto = "4.9.0-rc.1"

# External dependencies
anyhow = "1"
async-shutdown = "0.2"
clap = { version = "4.5.20", features = ["derive", "env"] }
crossterm = { version = "0.27", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3.30"
futures-concurrency = "7.6.0"
ratatui = { version = "0.28", features = ["crossterm"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.37", features = ["full", "sync"] }
tracing = "0.1.40"
tokio-stream = { version = "0.1.15", features = ["sync"] }
uuid = "1.11.0"
