# Generate src/env.h from the .env file.
#
# Note: Bazel can't access files outside the workspace, so before building with
# Bazel, you will need to copy or symlink the ../../.env file to the
# cpp/taskscpp directory.
genrule(
    name = "generate_env_h",
    srcs = [".env", "scripts/generate_env.awk"],
    outs = ["src/env.h"],
    cmd = "/usr/bin/env awk -f $(location scripts/generate_env.awk) $(location .env) > $@",
    visibility = ["//visibility:public"],
)

# Build rules for taskscpp
cc_binary(
    name = "taskscpp",
    srcs = ["src/env.h"] + glob([
        "src/*.cpp",
        "src/*.h",
    ], exclude = ["src/env.h"]),
    deps = [
        "//sdk:libditto",
        "//third_party/cxxopts:cxxopts",
    ],
    includes = [
        "src",
        "sdk",
    ],
    linkopts = [
        "-Lsdk",  # Include the sdk directory for linking
        "-lditto",  # Link against the libditto.a library
    ],
    data = [":generate_env_h"], # Ensure env.h is built before taskscpp
)
